Moved local storage cache limit to parameters; add clear cache button, added warning in home page, update style.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,6 +8,7 @@ services:
         class: AppBundle\Services\LocalStorageService
         arguments:
             - %kernel.cache_dir%
+            - %storage_cache_valid_for%
     app.slack:
         class: AppBundle\Services\SlackService
         arguments:
