--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,6 +3,7 @@
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     # A secret key that's used to generate certain security-related tokens
-    secret:         ThisTokenIsNotSoSecretChangeIt
-    message_limit:  10000
-    slack_token:    ~
+    secret:                     ThisTokenIsNotSoSecretChangeIt
+    message_limit:              10000
+    slack_token:                ~
+    storage_cache_valid_for:    60 minutes
